Horizontal scrollbar and small corrections on the frontend

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -12,8 +12,8 @@
   --color-text-secondary: #666666;
   --color-border: #E0E0E0;
   --color-light-gray: #F5F5F5;
-  --color-click: #EBCA97;
-  --color-yellow-gold: #EBCA97;
+  --color-click: #E6CA97;
+  --color-yellow-gold: #E6CA97;
   --color-white-gold: #D9D9D9;
   --color-rose-gold: #E1A4A9;
 }
